# py-libzfs

./: .gitignore  Dockerfile  LICENSE  MANIFEST.in  Makefile  Makefile.in  README.md  config.h  config.h.in  config.py.in  configure  configure.ac  converter.pxi  libzfs.pyx  nvpair.pxi  setup.py  sources.list
.githib/workflows/: ci.yml
.github/workflows/: ci.yml
debian/: changelog  clean  control  copyright  rules  salsa-ci.yml
include/: assert.h
pxd/: config.pxi.in  libzfs.pxd  nvpair.pxd  sendflags.pxi.in  spa_features.pxi.in  types.pxd  userquota_props.pxi.in  zfs.pxd  zpool_status.pxi.in
